--- a/examples/examples-browser/views/chart.html
+++ b/examples/examples-browser/views/chart.html
@@ -6,9 +6,10 @@
     <meta charset="UTF-8">
     <title>CodePen - Web Speech Synthesis Demo</title>
     <!-- <link rel="stylesheet" href="./style.css"> -->
-    <!-- <script src="../public/js/commons.js"></script> -->
+    <script src="js/commons.js"></script>
    
-    <!-- <script src="../public/js/script.js"></script> -->
+    <script src="js/script.js"></script>
+    <script src="js/textToSpeech.js"></script>
     </head>
 
     <!-- partial:index.partial.html -->
@@ -16,8 +17,62 @@
     <h1>Web Speech Synthesis Demo</h1>
     
     <p id="msg"></p>
+    <button id='start-record-btn'>start</button>
+    <script>startSpeech()</script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
+    <script src="js/textToSpeech.js"></script>
+    <!-- <script>
+        try {
+            var SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
+            var recognition = new SpeechRecognition();
+        }
+        catch(e) {
+            console.error(e);
+            $('.no-browser-support').show();
+            $('.app').hide();
+        }
+
+        recognition.onstart = function() { 
+            // instructions.text('Voice recognition activated. Try speaking into the microphone.');
+        }
+        
+        recognition.onspeechend = function() {
+            // instructions.text('You were quiet for a while so voice recognition turned itself off.');
+        }
+        
+        recognition.onerror = function(event) {
+            if(event.error == 'no-speech') {
+            // instructions.text('No speech was detected. Try again.');  
+            };
+        }
+
+        recognition.onresult = function(event) {
+
+            // event is a SpeechRecognitionEvent object.
+            // It holds all the lines we have captured so far. 
+            // We only need the current one.
+            var current = event.resultIndex;
+        
+            // Get a transcript of what was said.
+            var transcript = event.results[current][0].transcript;
+        
+            // Add the current transcript to the contents of our Note.
+            noteContent += transcript;
+            console.log(noteContent)
+            noteTextarea.val(noteContent);
+        }
+
+        $('#start-record-btn').on('click', function(e) {
+            recognition.start();
+        });
+        function startSpeech() {
+            // $('#start-record-btn').on('click', function(e) {
+                recognition.start();
+            //   });
+        }
+    </script> -->
   
-    <input type="text" name="speech-msg" id="speech-msg" x-webkit-speech>
+    <!-- <input type="text" name="speech-msg" id="speech-msg" x-webkit-speech>
   
       <div class="option">
           <label for="voice">Voice</label>
@@ -34,13 +89,15 @@
       <div class="option">
           <label for="pitch">Pitch</label>
           <input type="range" min="0" max="2" step="0.1" name="pitch" id="pitch" value="1">
-      </div>
+      </div> -->
   
       <button id="speak">Speak</button>
   
   </div>
+  
 
     <script  src="/js/script.js"></script>
       
       </html>
+
       
