--- a/examples/examples-browser/views/webcamFaceExpressionRecognition.html
+++ b/examples/examples-browser/views/webcamFaceExpressionRecognition.html
@@ -13,7 +13,7 @@
   <script  src="/js/script.js"></script>
   <!-- <script  src="/js/speechRecognition.js"></script> -->
   <meta charset="UTF-8">
-  <title>CodePen - Webkit Speech Recognition test</title>
+  <title>Wisdom AI</title>
   <link rel="stylesheet" href="./style.css">
   <!-- <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script> -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.js'></script>
@@ -24,17 +24,17 @@
   
 
   <div id="page-wrapper">
-    <h1>Web Speech Synthesis Demo</h1>
+    <h1 style="display: flex; justify-content: center; margin-bottom: -30px; font-size:20px">Wisdom AI</h1>
     
-    <p id="msg"></p>
+    <!-- <p id="msg"></p> -->
   
-    <input type="text" name="speech-msg" id="speech-msg" x-webkit-speech>
+    <!-- <input type="text" name="speech-msg" id="speech-msg" x-webkit-speech> -->
   
       <div class="option">
-          <label for="voice">Voice</label>
+          <!-- <label for="voice">Voice</label> -->
           <select name="voice" id="voice"></select>
       </div>
-      <div class="option">
+      <!-- <div class="option">
           <label for="volume">Volume</label>
           <input type="range" min="0" max="1" step="0.1" name="volume" id="volume" value="1">
       </div>
@@ -47,7 +47,7 @@
           <input type="range" min="0" max="2" step="0.1" name="pitch" id="pitch" value="1">
       </div>
   
-      <button id="speak">Speak</button>
+      <button id="speak">Speak</button> -->
   
   </div>
   <script  src="/js/script.js"></script>
@@ -67,8 +67,8 @@
     </div>
   </div>
   
-  <button>START LISTENING</button>
-  <h1></h1>
+  <!-- <button>START LISTENING</button> -->
+  <!-- <h1></h1> -->
 
   
   <!-- <script  src="js/bundle.js"></script> -->
